--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 725146572760940617
 textchannel = 721068305137401962
 ladderchannel = 
 jungsanchannel = 
