--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 721068305137401964
 textchannel = 721068305137401962
-ladderchannel = 
+ladderchannel = 723438674905268245
 jungsanchannel = 
 killchannel = 
 racingchannel = 
