--- a/kill_list.ini
+++ b/kill_list.ini
@@ -4,10 +4,15 @@
 블랙릴리 1
 카탄 1
 트롬바 1
-사르카 1
+사르카 2
 가레스 1400 1
 체르투바 1
 레피로 1442 1
 베히모스 1514 1
 티미니엘 1600 1
 오염된 크루마 1
+탈라킨 1
+메두사 1
+메두 1958 1
+메두사 1958 1
+크루마 1
