--- a/kill_list.ini
+++ b/kill_list.ini
@@ -11,8 +11,15 @@
 베히모스 1514 1
 티미니엘 1600 1
 오염된 크루마 1
-탈라킨 1
+탈라킨 2
 메두사 1
 메두 1958 1
 메두사 1958 1
 크루마 1
+티미니엘 1
+오염된크루마 1
+베히코스 1
+베히모스 1
+펠리스 1
+스탄 1
+코어수스켑터 1
