--- a/kill_list.ini
+++ b/kill_list.ini
@@ -1,1 +1,35 @@
 -----척살명단-----
+크루마 1
+사반 1
+메두사 3
+망각의거울 1
+란도르 1
+글라키 1
+카탄 2
+판드라이드 1
+템페스트 2
+드래곤비스트 1
+티미니엘 1
+오염된크루마 1
+발보 0913 1
+코룬 1
+베히모스 0932 1
+스탄 0940 1
+스탄 0939 2
+펠리스 1
+블랙릴리 1
+레피로 2
+크루마 1354 1
+코어 1405 1
+코어 수스켑터 1405 1
+탈라킨 1415 1
+카탄 1740 1
+사반 1746 1
+베히모스 2
+판드 2005 1
+판드라이드 2005 1
+템페스트 2007 1
+탈라킨 1
+체르투바 1
+가레스 1
+바실라 2
