--- a/kill_list.ini
+++ b/kill_list.ini
@@ -2,5 +2,33 @@
 사반 1
 오염크루마 0611 1
 크루마 0611 1
-바실라 1
+바실라 4
 판드 1
+티미니엘 1
+발보 0927 1
+레피로 1
+탈라킨 1
+릴리 1030 1
+블랙 릴리 1030 1
+코룬 1046 1
+탈킨 1
+메두사 2
+베히모스 2
+사무엘 1
+망각거울 1
+망각의거울 1
+티미트리스 1
+판드라이드 0807 1
+트롬바 1
+카탄 1
+판나 1
+판나로드 1
+크루마 1
+란도르 1
+드래곤 비스트 1
+여왕의개미 1
+여왕개미 1
+사르카 1
+글라키 1
+사무엘 1310 1
+펠리스 1
