--- a/kill_list.ini
+++ b/kill_list.ini
@@ -1,10 +1,10 @@
 -----척살명단-----
-사반 1
+사반 2
 오염크루마 0611 1
 크루마 0611 1
 바실라 4
 판드 1
-티미니엘 1
+티미니엘 2
 발보 0927 1
 레피로 1
 탈라킨 1
@@ -32,3 +32,5 @@
 글라키 1
 사무엘 1310 1
 펠리스 1
+사반 1755 1
+히실로메 1
