--- a/kill_list.ini
+++ b/kill_list.ini
@@ -7,30 +7,46 @@
 티미니엘 2
 발보 0927 1
 레피로 1
-탈라킨 1
+탈라킨 3
 릴리 1030 1
 블랙 릴리 1030 1
 코룬 1046 1
-탈킨 1
-메두사 2
-베히모스 2
-사무엘 1
+탈킨 2
+메두사 3
+베히모스 3
+사무엘 2
 망각거울 1
 망각의거울 1
-티미트리스 1
+티미트리스 2
 판드라이드 0807 1
-트롬바 1
-카탄 1
+트롬바 5
+카탄 2
 판나 1
 판나로드 1
 크루마 1
 란도르 1
 드래곤 비스트 1
 여왕의개미 1
-여왕개미 1
+여왕개미 3
 사르카 1
 글라키 1
 사무엘 1310 1
-펠리스 1
+펠리스 3
 사반 1755 1
 히실로메 1
+코어수스켑터 0600 1
+코어수스켑터 1800 1
+브래카 2
+판드라이드 2
+템페스트 1
+가레스 1
+스탄 3
+트롬바 2052 1
+엔쿠라 1
+티미 1
+크루마 2218 1
+블랙 릴리 1
+코룬 1
+오염된 크루마 1
+티미니엘 0115 1
+망각의 거울 1
