--- a/kill_list.ini
+++ b/kill_list.ini
@@ -1,1 +1,24 @@
 -----척살명단-----
+체르투바 0602 1
+티미트리스 1
+판드라이드 1
+탈라킨 1
+스탄 1
+메두사 1
+사르카 1
+탈킨 1
+사반 0640 1
+오염된크루마 1
+카탄 1
+트롬바 1
+릴리 2
+릴리0658 1
+블랙릴리 0658 1
+코룬 1
+티미니엘 1
+글라키 0747 1
+망각의거울 1
+란도르 1
+사무엘 1
+베히모스 0703 1
+바실라 1
