--- a/kill_list.ini
+++ b/kill_list.ini
@@ -1,29 +1,29 @@
 -----척살명단-----
 체르투바 0602 1
-티미트리스 2
+티미트리스 3
 판드라이드 1
-탈라킨 2
-스탄 2
-메두사 2
-사르카 1
+탈라킨 3
+스탄 4
+메두사 3
+사르카 2
 탈킨 1
 사반 0640 1
 오염된크루마 1
-카탄 2
+카탄 3
 트롬바 2
 릴리 2
 릴리0658 1
 블랙릴리 0658 1
-코룬 1
+코룬 2
 티미니엘 2
 글라키 0747 1
 망각의거울 1
 란도르 1
-사무엘 1
+사무엘 3
 베히모스 0703 1
-바실라 1
+바실라 2
 펠리스 0530 2
-펠리스 3
+펠리스 4
 펠리스 1130 1
 템페스트 1
 바실라 1334 1
@@ -31,3 +31,11 @@
 오염된 크루마 1
 가레스 1
 베히모스 1
+셀루 1
+판 드라이드 2
+사반 1
+블랙 릴리 1
+망각의 거울 1
+크루마 1
+베히모스 0115 1
+레피로 1
