--- a/kill_list.ini
+++ b/kill_list.ini
@@ -1,5 +1,5 @@
 -----척살명단-----
-체르투바 0602 1
+체르투바 0
 티미트리스 3
 판드라이드 1
 탈라킨 3
@@ -7,35 +7,37 @@
 메두사 3
 사르카 2
 탈킨 1
-사반 0640 1
+사반 0
 오염된크루마 1
 카탄 3
 트롬바 2
 릴리 2
 릴리0658 1
-블랙릴리 0658 1
+블랙릴리 0
 코룬 2
 티미니엘 2
-글라키 0747 1
+글라키 0
 망각의거울 1
 란도르 1
 사무엘 3
-베히모스 0703 1
+베히모스 0
 바실라 2
-펠리스 0530 2
+펠리스 0
 펠리스 4
-펠리스 1130 1
+펠리스 1
 템페스트 1
-바실라 1334 1
-크루마 1338 1
-오염된 크루마 1
+바실라 1
+크루마 1
+오염된 크
 가레스 1
 베히모스 1
 셀루 1
-판 드라이드 2
+판 드
 사반 1
-블랙 릴리 1
-망각의 거울 1
+블랙 릴
+망각의 거
 크루마 1
-베히모스 0115 1
+베히모스 0
 레피로 1
+오염된크루마 2307 1
+티미니엘 2345 1
