--- a/kill_list.ini
+++ b/kill_list.ini
@@ -1,43 +1,58 @@
 -----척살명단-----
 체르투바 0
-티미트리스 3
-판드라이드 1
+티미트리스 5
+판드라이드 2
 탈라킨 3
-스탄 4
-메두사 3
+스탄 6
+메두사 4
 사르카 2
 탈킨 1
-사반 0
+사반 2
 오염된크루마 1
-카탄 3
-트롬바 2
+카탄 4
+트롬바 3
 릴리 2
 릴리0658 1
 블랙릴리 0
-코룬 2
-티미니엘 2
-글라키 0
+코룬 3
+티미니엘 4
+글라키 1
 망각의거울 1
-란도르 1
-사무엘 3
-베히모스 0
-바실라 2
-펠리스 0
-펠리스 4
+란도르 2
+사무엘 5
+베히모스 3
+바실라 3
 펠리스 1
+펠리스 5
+펠리스 2
 템페스트 1
-바실라 1
-크루마 1
+크루마 3
 오염된 크
-가레스 1
-베히모스 1
-셀루 1
+가레스 3
+베히모스 4
+셀루 2
 판 드
-사반 1
+사반 3
 블랙 릴
 망각의 거
-크루마 1
-베히모스 0
+크루마 3
+베히모스 3
 레피로 1
 오염된크루마 2307 1
 티미니엘 2345 1
+크루마 0608 1
+브래카 2
+판나로드 0704 1
+블랙릴리 0715 1
+오염된크루마 0720 1
+코어 수스켑터 1
+켈소스 1
+템페스트 1155 1
+탈라킨 1246 1
+오염된 크루마 1
+판 나로드 1
+일그러진 프라인 장로 1
+트룸바 1
+마투라 2
+판 드라이드 1
+블랙 릴리 2
