--- a/kill_list.ini
+++ b/kill_list.ini
@@ -1,58 +1,75 @@
 -----척살명단-----
 체르투바 0
-티미트리스 5
-판드라이드 2
-탈라킨 3
-스탄 6
-메두사 4
-사르카 2
+티미트리스 6
+판드라이드 4
+탈라킨 5
+스탄 7
+메두사 5
+사르카 3
 탈킨 1
-사반 2
-오염된크루마 1
-카탄 4
-트롬바 3
+사반 4
+오염된크루마 2
+카탄 6
+트롬바 4
 릴리 2
 릴리0658 1
 블랙릴리 0
-코룬 3
-티미니엘 4
+코룬 5
+티미니엘 7
 글라키 1
 망각의거울 1
-란도르 2
+란도르 3
 사무엘 5
-베히모스 3
-바실라 3
+베히모스 4
+바실라 4
 펠리스 1
 펠리스 5
 펠리스 2
-템페스트 1
-크루마 3
+템페스트 2
+크루마 4
 오염된 크
 가레스 3
-베히모스 4
-셀루 2
+베히모스 5
+셀루 3
 판 드
-사반 3
+사반 5
 블랙 릴
 망각의 거
-크루마 3
-베히모스 3
-레피로 1
-오염된크루마 2307 1
-티미니엘 2345 1
-크루마 0608 1
-브래카 2
-판나로드 0704 1
-블랙릴리 0715 1
-오염된크루마 0720 1
-코어 수스켑터 1
-켈소스 1
-템페스트 1155 1
-탈라킨 1246 1
-오염된 크루마 1
-판 나로드 1
-일그러진 프라인 장로 1
+크루마 4
+베히모스 4
+레피로 2
+오염된크루마 3
+티미니엘 5
+크루마 1
+브래카 3
+판나로드 0
+블랙릴리 0
+오염된크루마 1
+코어 수
+켈소스 2
+템페스트 2
+탈라킨 3
+오염된 크
+판 나
+일그러진 프
 트룸바 1
 마투라 2
-판 드라이드 1
-블랙 릴리 2
+판 드
+블랙 릴
+발보 3
+돌염된 크루마 1
+블랙 릴리 1
+오염된 크루마 1
+히실로메 2
+여왕개미 1
+베히모스 1401 1
+티미트리스 1510 1
+스탄 1505 1
+1523 1
+1531 1
+사무엘 1531 1
+여왕개미 1757 1
+여왕개미 1758 1
+셀루 1803 1
+코어 수스켑터 1
+탈라킨 1848 1
