--- a/kill_list.ini
+++ b/kill_list.ini
@@ -4,16 +4,16 @@
 판드라이드 4
 탈라킨 5
 스탄 7
-메두사 5
+메두사 6
 사르카 3
 탈킨 1
 사반 4
 오염된크루마 2
 카탄 6
 트롬바 4
-릴리 2
+릴리 3
 릴리0658 1
-블랙릴리 0
+블랙릴리 1
 코룬 5
 티미니엘 7
 글라키 1
@@ -43,7 +43,7 @@
 크루마 1
 브래카 3
 판나로드 0
-블랙릴리 0
+블랙릴리 1
 오염된크루마 1
 코어 수
 켈소스 2
@@ -73,3 +73,6 @@
 셀루 1803 1
 코어 수스켑터 1
 탈라킨 1848 1
+카탄 1920 1
+오염된 크루마 1535 2
+크루마 1500 1
