--- a/kill_list.ini
+++ b/kill_list.ini
@@ -57,22 +57,22 @@
 판 드
 블랙 릴
 발보 3
-돌염된 크루마 1
-블랙 릴리 1
-오염된 크루마 1
+돌염된 크
+블랙 릴
+오염된 크
 히실로메 2
 여왕개미 1
-베히모스 1401 1
-티미트리스 1510 1
-스탄 1505 1
+베히모스 1
+티미트리스 1
+스탄 1
 1523 1
 1531 1
-사무엘 1531 1
-여왕개미 1757 1
-여왕개미 1758 1
-셀루 1803 1
-코어 수스켑터 1
-탈라킨 1848 1
-카탄 1920 1
-오염된 크루마 1535 2
-크루마 1500 1
+사무엘 1
+여왕개미 1
+여왕개미 1
+셀루 1
+코어 수
+탈라킨 1
+카탄 1
+오염된 크
+크루마 1
